package ar.edu.utn.frba.dds.quemepongo;

public enum Categoria {
  CALZADO,
  PARTE_SUPERIOR,
  PARTE_INFERIOR,
  ACCESORIO
}
