package ar.edu.utn.frba.dds.quemepongo;

public enum Material {
  CUERO,
  LANA,
  JEAN,
  TELA,
  PIQUE,
  ACETATO,
  // ...
}
