package ar.edu.utn.frba.dds.quemepongo;

public enum Trama {
  LISA,
  RAYADA,
  LUNARES,
  CUADROS,
  ESTAMPADO
}
